--- a/user/templates/user/sign_up.html
+++ b/user/templates/user/sign_up.html
@@ -11,6 +11,7 @@
 
 {% block css %}  
  <link href="{% static 'user/css/account.css' %}" rel="stylesheet" >
+ {{ block.super }}
    
 
 {%endblock css %}
@@ -72,25 +73,6 @@
 </div>
 
 {% endblock content %}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
