--- a/post/templates/post/add_post.html
+++ b/post/templates/post/add_post.html
@@ -6,34 +6,44 @@
 {% block content %}
 
    {% if messages %}
-   <ul class="messages">
-   {% for message in messages %}
-      <li class="{{ message.tags }}">{{ message }}</li>
-   {% endfor %}
-   </ul>
+       <ul class="messages">
+       {% for message in messages %}
+          <li class="{{ message.tags }}">{{ message }}</li>
+       {% endfor %}
+       </ul>
    {% endif %}
-
    
-   <form action="{% url 'add_post' %}", method="POST"  novalidate enctype="multipart/form-data" > 
+   <div class=row> 
+            <div class=col-md-4> </div>
+            <div class=col-md-4>
+                   <form action="{% url 'add_post' %}", method="POST"  novalidate enctype="multipart/form-data" > 
 
-    {% csrf_token %}
+                        {% csrf_token %}
 
-    {% for field in form %}
-       <div>
-            {{ field.label_tag }}
-            {{ field }}
-            {{ field.errors }}
-
-
-      </div>
-       
-    {% endfor %}
-    <input type="submit" value="Submit">
+                        {% for field in form %}
+                           <div>
+                                {{ field.label_tag }}
+                                {{ field }}
+                                {{ field.errors }}
 
 
-   </form>
+                          </div>
+                           
+                        {% endfor %}
+                        <input type="submit" value="Submit">
+
+
+                     </form>
    
-     
+
+            </div>
+            <div class=col-md-4> </div>
+
+
+   </div>
+   
+   
+
 
 
 {% endblock content %}
